--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,9 @@
                 "facebook/php-sdk-v4" : "4.0.*",
                 "tracy/tracy": "2.3.*@dev",
                 "components/jquery": "2.1.3"
-	}
+	},
+        
+        "autoload": {
+                "classmap": ["control/"]
+        }
 }
